Refactor contact.html: update header structure to enhance search bar and icon consistency for improved UI

--- a/contact.html
+++ b/contact.html
@@ -24,22 +24,23 @@
       </div>
 
       <div id="right-container">
-        <!---------------------Search bar------------------>
-        <div class="search-bar">
-          <input type="text" placeholder="Search..." />
-        </div>
-
-        <!-- Login icon (user) -->
-        <button class="login-btn" title="Login">
-          <i class="fas fa-user"></i>
-        </button>
-
-        <!-- Cart icon with badge -->
-        <button class="cart-btn" title="Cart">
-          <i class="fas fa-shopping-cart"></i>
-          <span class="cart-count">0</span>
-        </button>
+       <!-------------------------------------SEARCH LOGIN SHOPPING BAG------------------------------------------->
+    <div id="header-right-container">
+      <div class="search-bar">
+        <span class="material-icons">search</span>
+        <input type="text" placeholder="What are you looking for?" />
       </div>
+          <!-- Login Icon -->
+      <button class="login-btn" title="Login">
+        <span class="material-icons">person</span>
+      </button>
+
+      <!-- Bag Icon -->
+      <button class="shopping-bag-btn" title="Shopping Bag">
+        <span class="material-icons">shopping_bag</span>
+        <span class="bag-count">0</span>
+      </button>
+    </div>
     </header>
 
     <nav id="nav-bar">
