Refactor home.html: rename shopping-bag count class for consistency

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
 
       <button class="shopping-bag-btn" title="shopping-bag">
         <span class="material-icons">shopping_bag</span>
-        <span class="shopping-bag-count">0</span>
+        <span class="bag-count">0</span>
       </button>
     </div>
 
