Refactor contact.html: add missing page-wrapper div for improved structure

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <script defer src="script.js"></script>
   </head>
-
+<div class="page-wrapper">
   <body>
     <header>
       <div id="left-container"></div>
@@ -81,7 +81,7 @@
         </fieldset>
       </section>
     </main>
-
+</div>
     <hr />
     <!-------------------styled visual line------------------------>
 
