Refactor home.html: wrap content in .page-wrapper div for improved layout structure

--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
     <script defer src="script.js"></script>
   </head>
 
+ <div class="page-wrapper"> 
 <body>
 
   <header>
@@ -24,7 +25,7 @@
     <div id="header-center-container">
       <h1 id="title">FabNails.Inc</h1>
     </div>
-
+    
 <!-------------------------------------SEARCH LOGIN SHOPPING BAG------------------------------------------->
     <div id="header-right-container">
       <div class="search-bar">
@@ -95,7 +96,7 @@
     </main>
     
     <hr /> <!--horizontal line-->
-   
+  </div>
     <footer>
       <p><a href="contact.html">Contact Us</a></p> <!--Email Contact Form LINK in footer-->
       <p>© Copyright 2025 Estelle Tolmay. All rights reserved.</p>
