--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <script defer src="script.js"></script>
   </head>     
+  <div class="page-wrapper">
   <body>
     <header>
       <div id="header-left-container">
@@ -107,6 +108,7 @@
 </section>   
 <!------------------------------------------------------------------------------------------------------>
 <hr /><!--horizontal line-->
+</div>
 <footer>
       <p><a href="contact.html">Contact Us</a></p><!-- Email Contact Form LINK in footer -->
       <p>© Copyright 2025 Estelle Tolmay. All rights reserved.</p>
