Refactor home.html: adjust layout structure and improve formatting for readability

--- a/home.html
+++ b/home.html
@@ -14,9 +14,9 @@
     <script defer src="script.js"></script>
   </head>
 
- <div class="page-wrapper"> 
+ 
 <body>
-
+<div class="page-wrapper"> 
   <header>
     <div id="header-left-container">
         <!-- -----------------placeholder for logo ------------------------------------------------------>
@@ -87,7 +87,7 @@
         </div>
       </section>
 
-      <!-------------------------- RIGHT SECTION OF HERO CONTAINER----------------------------------------------------------------->
+      <!------------------------------------------------------------- RIGHT SECTION OF HERO CONTAINER----------------------------------------------------------------->
       <section id="right-hero-section">
         <img
           id="hero-image"
@@ -96,10 +96,23 @@
     </main>
     
     <hr /> <!--horizontal line-->
+
+    <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------->
+    
+    <!-- TRENDING PRODUCTS SECTION USING innerHTML method -->
+    <section class="trending-products">
+  <h2>TRENDING PRODUCTS</h2>
+  <P>(Using innerHTML Example)</P>
+  <div id="trendingGrid" class="product-grid"></div> <!--reusing the .product-grid class for layout from shop.html-->
+</section>
+
   </div>
+<hr>
     <footer>
       <p><a href="contact.html">Contact Us</a></p> <!--Email Contact Form LINK in footer-->
       <p>© Copyright 2025 Estelle Tolmay. All rights reserved.</p>
     </footer>
+
+
   </body>
 </html>
