Refactor trending products section: improve comments and formatting for clarity

--- a/home.html
+++ b/home.html
@@ -97,15 +97,13 @@
     
     <hr /> <!--horizontal line-->
 
-    <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------->
-    
-    <!-- TRENDING PRODUCTS SECTION USING innerHTML method -->
+    <!-----------------HOMEPAGE TRENDING PRODUCTS---USING innerHTML method------------------------>
     <section class="trending-products">
-  <h2>TRENDING PRODUCTS</h2>
-  <P>(Using innerHTML Example)</P>
-  <div id="trendingGrid" class="product-grid"></div> <!--reusing the .product-grid class for layout from shop.html-->
-</section>
-
+      <h2>TRENDING PRODUCTS</h2>
+        <P>(Using innerHTML Example)</P>
+        <div id="trendingGrid" class="product-grid"></div> <!--reusing the .product-grid class for layout from shop.html-->
+    </section>
+<!-- ----------------------------------------------------------- -->
   </div>
 <hr>
     <footer>
