Refactor shopping bag panel and navigation comments for clarity

--- a/shop.html
+++ b/shop.html
@@ -44,8 +44,13 @@
           </button>
         </div>
       </header>
+      <!-- -------------------------SHOW SHOPPING BAG ----------------------------------------------------->
+      <div id="shoppingBagPanel" class="shopping-bag-panel" style="display: none">
+        <h2>My Shopping Bag</h2>
+        <ul id="shoppingBagList"></ul>
+      </div>
 
-      <!-- ------------------------------------------------NAV BAR---------------------------------------------------------->
+      <!-- ----------------------------NAV BAR---------------------------------------------------------->
       <nav id="nav-bar">
         <ul>
           <li class="btn nav-link"><a href="home.html">Home</a></li>
@@ -56,7 +61,7 @@
         </ul>
         <!-- ul by default display bullets; assign list-style in css -->
       </nav>
-      <!---------------------- -----------------🎠BUILD PRODUCT CAROUSEL-------------------------------------------------------->
+      <!------------------🎠BUILD PRODUCT CAROUSEL-------------------------------------------------------->
       <div class="product-carousel-container">
         <h1>New For You!</h1>
         <div class="selected-image-container">
@@ -76,10 +81,11 @@
           <img class="thumbnail" src="./Images/glitter.jpeg" alt="OPI image 6_glitter" />
         </div>
       </div>
+
       <hr />
       <!--horizontal line-->
 
-      <!----------------------------------PRODUCT GRID SECTION ON SHOP.html using .createElement Method------------------------------------------------->
+      <!------PRODUCT GRID SECTION ON SHOP.html using .createElement Method------------------------------------------------->
 
       <section class="product-grid-section">
         <h2>Shop What's New</h2>
