Update navigation links: replace 'New' with 'Book Appointment'

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
       <ul>
         <li class="btn nav-link"><a href="home.html">Home</a></li>
         <li class="btn nav-link"><a href="shop.html">Shop</a></li>
-        <li class="btn nav-link"><a href="new">New</a></li>
+        <li class="btn nav-link"><a href="bookAppointment">Book Appointment</a></li>
         <li class="btn nav-link"><a href="services">Services</a></li>
         <li class="btn nav-link"><a href="blog">Blog</a></li>
       </ul>
