Update navigation link: replace 'New' with 'Book Appointment'

--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
     <nav id="nav-bar">
       <ul>
         <li class="btn nav-link"><a href="shop.html">Shop</a></li>
-        <li class="btn nav-link"><a href="new">New</a></li>
+        <li class="btn nav-link"><a href="bookAppointment">Book Appointment</a></li>
         <li class="btn nav-link"><a href="services">Services</a></li>
         <li class="btn nav-link"><a href="blog">Blog</a></li>
       </ul><!---ul by default display bullets; assign list-style in css--->
