Update navigation link to 'Book Appointment' and enhance arrow button styles

--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
         <ul>
           <li class="btn nav-link"><a href="home.html">Home</a></li>
           <li class="btn nav-link"><a href="shop.html">Shop All</a></li>
-          <li class="btn nav-link"><a href="new.html">New</a></li>
+          <li class="btn nav-link"><a href="bookAppointment.html">Book Appointment</a></li>
           <li class="btn nav-link"><a href="services.html">Services</a></li>
           <li class="btn nav-link"><a href="blog.html">Blog</a></li>
         </ul>
@@ -65,9 +65,13 @@
       <div class="product-carousel-container">
         <h1>New For You!</h1>
         <div class="selected-image-container">
-          <button class="arrow" id="left-arrow">&lt;</button>
+          <button class="arrow" id="left-arrow">
+            <span class="material-icons">chevron_left</span>
+          </button>
           <img id="selected-image" src="./Images/shes-a-bad-muffuletta.jpeg" alt="selected nail polish" />
-          <button class="arrow" id="right-arrow">&gt;</button>
+          <button class="arrow" id="right-arrow">
+            <span class="material-icons">chevron_right</span>
+          </button>
           <!-- &lt &gt are literal symbols representing nav arrows; best practice use &lt; and &gt; to avoid potential rendering issues. -->
         </div>
 
